@@ -9,6 +9,15 @@
         <y>600</y>
       </dpi>
     </resolution>
+    <margins>
+      <general>
+        <unit>mm</unit>
+	<top>6</top>
+	<bottom>4</bottom>
+	<left>5</left>
+	<right>5</right>
+      </general>
+    </margins>
     <consumables>
       <comments>
         <en>Toner ($50-60)</en>
@@ -60,11 +69,6 @@
     1Meg you may be unable to print some jobs. It is recommended to
     stay at 300 dpi without extra memory, and on that resolution
     &quot;ljet4&quot; is the better driver than HPIJS.&lt;p&gt;
-
-    When printing text from the command line the 1st line of the first
-    page is only half visible; also column 77 is the last column to be
-    fully printed. Sophisticated applications that use wide margins
-    all-around print fine.
 
     </en>
   </comments>
