@@ -1,5 +1,9 @@
 2006-01-06  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* printer/HP-LaserJet_5L.xml: Added margin definitions, so that
+	  text print jobs get correctly printed by CUPS (Thanks to Martin
+	  Mares, mj at ucw dot cz, for the patch).
+
 	* configure.in, configure.ac: Renamed configure.in to
 	  configure.ac, to make the package working with the current
 	  versions of aclocal and autoconf.
